# dvw

./: KNOWN_ISSUES.md  README.md  cursor-shim.sh  dvw  dvw-install.sh  install-cursor-shim.sh
blueprint/: README.md  devcontainer.json
catalog-service/: .gitignore  README.md  pyproject.toml
catalog-service/app/: __init__.py  config.py  deps.py  docker_inspect.py  main.py  migrate.py  models.py  store.py
catalog-service/app/routers/: blueprint.py  catalog.py  containers.py  defaults.py  health.py  repos.py  workspaces.py
catalog-service/clients/: README.md
catalog-service/deploy/: catalog.env.example  deploy.sh  docker-socket-proxy.md  dvw-catalog-backup.service  dvw-catalog-backup.timer  dvw-catalog.service  host-install.sh  host-update.sh
catalog-service/tests/: conftest.py  test_api_misc.py  test_migrate.py  test_resolver.py  test_store.py  test_workspaces.py
docs/superpowers/plans/: 2026-06-07-update-notifier.md  2026-06-11-dvw-tui.md
docs/superpowers/specs/: 2026-06-07-update-notifier-design.md  2026-06-11-dvw-tui-design.md  2026-06-18-paseo-pair-autoheal-ssh-alias-design.md
lib/: catalog-http-lib.sh  catalog.sh  commands.sh  config.sh  connect-resolver.sh  connect.sh  ssh-sync.sh  tui-launch.sh  ui.sh  update-check.sh  version.sh  win-ssh-proxy.sh  wizard.sh  wsl-bridge.sh
systemd/: rclone-dropbox.service
tests/bats/: blueprint-removed.bats  catalog.bats  config.bats  dispatch.bats  doctor-uv.bats  install.bats  pair.bats  resolver.bats  run.sh  ssh-alias.bats  sync.bats  tui-launch.bats  update-check.bats  update-refresh.bats  version.bats  wizard.bats
tests/bats/fixtures/: empty-catalog.json  future-version-catalog.json  valid-catalog.json
tests/bats/lib/: catalog-stub.bash
tmux/: ANALYSIS.md  FIX.md  README.md  clipboard-test.sh  tmux-diag.sh  tmux-local.conf
tui/: pyproject.toml
tui/dvw_tui/: __init__.py  actions.py  app.py  client.py  render.py  theme.tcss
tui/dvw_tui/screens/: confirm.py  connect.py  doctor.py  main.py  menu.py  orphans.py  pair.py
tui/tests/: conftest.py  test_actions.py  test_app_actions.py  test_client.py  test_connect_screen.py  test_doctor_screen.py  test_main_screen.py  test_menu.py  test_orphans_screen.py  test_pair_screen.py  test_render.py
