[project]
name = "dvw-catalog"
version = "0.1.0"
description = "Authoritative DevPod workspace catalog + container resolver for vossisrv. Replaces the Dropbox-synced catalog.json and the client-side, SSH-bound container resolver with a local FastAPI service that has direct Docker access."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "docker>=7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[project.scripts]
dvw-catalog-migrate = "app.migrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
