[project]
name = "dvw-tui"
version = "0.1.0"
description = "lazydocker-style TUI for dvw workspaces"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
]

[project.scripts]
dvw-tui = "dvw_tui.app:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dvw_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
